--- a/index.html
+++ b/index.html
@@ -3,10 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
+    />
     <link rel="stylesheet" href="css/styles.css">
     <title>New Project</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <header>
+        <div class="container">
+            <div class="header">
+                <div class="header-logo">
+                    <a href="#"><b>Sun</b>Set</a>
+                </div>
+                <div class="header-contact">
+                    <div class="header-address">
+                        <i class="fa fa-map-pin"></i>
+                        <span>Львів, вул. Львівська, 1</span>
+                    </div>
+                    <div class="header-phone">
+                        <i class="fa fa-phone"></i>
+                        <span>+38(063)0000000</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <div class="section-presentation">
+        <div class="presentation-left"></div>
+        <div class="presentation-right">
+            <h1 class="presentation-title">Головний заголовок</h1>
+            <h2 class="presentation-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto id laudantium nobis totam eos, nulla quam. Illum itaque ea blanditiis hic, adipisci architecto ipsa consectetur deleniti? Facere dolores deleniti minima. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae tenetur reprehenderit ab officiis sunt corrupti modi architecto laudantium quisquam. Ratione, odio impedit libero eius in aliquam eligendi itaque explicabo non!</h2>
+            <div type="button" class="callback-bt">
+                <div class="text-call">
+                    <i class="fa fa-phone"></i>
+                    <span>Замовити<br>звінок</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="section-products">
+        <div class="row">
+            <div class="col col-33">
+                <div class="products-img">
+                    <img src="https://unsplash.it/520/520">
+                </div>
+            </div>
+            <div class="col col-33">
+                <div class="products-img">
+                    <img src="https://unsplash.it/520/520">
+                </div>
+            </div>
+            <div class="col col-33">
+                <div class="products-img">
+                    <img src="https://unsplash.it/520/520">
+                </div>
+            </div>
+            <div class="col col-33">
+                <div class="products-img">
+                    <img src="https://unsplash.it/520/520">
+                </div>
+            </div>
+            <div class="col col-33">
+                <div class="products-img">
+                    <img src="https://unsplash.it/520/520">
+                </div>
+            </div>
+            <div class="col col-33">
+                <div class="products-img">
+                    <img src="https://unsplash.it/520/520">
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
