--- a/index.html
+++ b/index.html
@@ -44,35 +44,37 @@
         </div>
     </div>
     <div class="section-products">
-        <div class="row">
-            <div class="col col-33">
-                <div class="products-img">
-                    <img src="https://unsplash.it/520/520">
+        <div class="container">
+            <div class="row">
+                <div class="col col-33">
+                    <div class="products-img">
+                        <img src="https://unsplash.it/520/520">
+                    </div>
                 </div>
-            </div>
-            <div class="col col-33">
-                <div class="products-img">
-                    <img src="https://unsplash.it/520/520">
+                <div class="col col-33">
+                    <div class="products-img">
+                        <img src="https://unsplash.it/520/520">
+                    </div>
                 </div>
-            </div>
-            <div class="col col-33">
-                <div class="products-img">
-                    <img src="https://unsplash.it/520/520">
+                <div class="col col-33">
+                    <div class="products-img">
+                        <img src="https://unsplash.it/520/520">
+                    </div>
                 </div>
-            </div>
-            <div class="col col-33">
-                <div class="products-img">
-                    <img src="https://unsplash.it/520/520">
+                <div class="col col-33">
+                    <div class="products-img">
+                        <img src="https://unsplash.it/520/520">
+                    </div>
                 </div>
-            </div>
-            <div class="col col-33">
-                <div class="products-img">
-                    <img src="https://unsplash.it/520/520">
+                <div class="col col-33">
+                    <div class="products-img">
+                        <img src="https://unsplash.it/520/520">
+                    </div>
                 </div>
-            </div>
-            <div class="col col-33">
-                <div class="products-img">
-                    <img src="https://unsplash.it/520/520">
+                <div class="col col-33">
+                    <div class="products-img">
+                        <img src="https://unsplash.it/520/520">
+                    </div>
                 </div>
             </div>
         </div>
