--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="presentation-right">
             <h1 class="presentation-title">Головний заголовок</h1>
             <h2 class="presentation-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto id laudantium nobis totam eos, nulla quam. Illum itaque ea blanditiis hic, adipisci architecto ipsa consectetur deleniti? Facere dolores deleniti minima. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae tenetur reprehenderit ab officiis sunt corrupti modi architecto laudantium quisquam. Ratione, odio impedit libero eius in aliquam eligendi itaque explicabo non!</h2>
-            <div type="button" class="callback-bt">
+            <div type="button" class="callback-btn">
                 <div class="text-call">
                     <i class="fa fa-phone"></i>
                     <span>Замовити<br>звінок</span>
