--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
                 <div class="header-logo">
                     <a href="#">SunSet</a>
                 </div>
+                <nav class="nav">
+                    <a href="#" class="nav-link">Головна</a>
+                    <a href="#" class="nav-link">Продукція</a>
+                    <a href="#" class="nav-link">Про нас</a>
+                    <a href="#" class="nav-link">Відгуки</a>
+                </nav>
                 <div class="header-contact">
                     <div class="header-address">
                         <i class="fa fa-map-pin"></i>
@@ -47,37 +53,35 @@
         </div>
     </div>
     <div class="section-products">
-        <div class="container">
-            <div class="row">
-                <div class="col col-33">
-                    <div class="products-img">
-                        <img src="https://unsplash.it/520/520">
-                    </div>
+        <div class="row">
+            <div class="col col-33">
+                <div class="products-img">
+                    <img src="https://unsplash.it/520/520">
                 </div>
-                <div class="col col-33">
-                    <div class="products-img">
-                        <img src="https://unsplash.it/520/520">
-                    </div>
+            </div>
+            <div class="col col-33">
+                <div class="products-img">
+                    <img src="https://unsplash.it/520/520">
                 </div>
-                <div class="col col-33">
-                    <div class="products-img">
-                        <img src="https://unsplash.it/520/520">
-                    </div>
+            </div>
+            <div class="col col-33">
+                <div class="products-img">
+                    <img src="https://unsplash.it/520/520">
                 </div>
-                <div class="col col-33">
-                    <div class="products-img">
-                        <img src="https://unsplash.it/520/520">
-                    </div>
+            </div>
+            <div class="col col-33">
+                <div class="products-img">
+                    <img src="https://unsplash.it/520/520">
                 </div>
-                <div class="col col-33">
-                    <div class="products-img">
-                        <img src="https://unsplash.it/520/520">
-                    </div>
+            </div>
+            <div class="col col-33">
+                <div class="products-img">
+                    <img src="https://unsplash.it/520/520">
                 </div>
-                <div class="col col-33">
-                    <div class="products-img">
-                        <img src="https://unsplash.it/520/520">
-                    </div>
+            </div>
+            <div class="col col-33">
+                <div class="products-img">
+                    <img src="https://unsplash.it/520/520">
                 </div>
             </div>
         </div>
