added header button and fixed navigation link

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                         <span>+38(063)0000000</span>
                     </div>
                 </div>
+                <button class="header-btn">Замовити замірника</button>
             </div>
         </div>
     </header>
