add icon to phone and address

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
     />
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/callback-bt.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;1,700&display=swap" rel="stylesheet">
     <title>SunSet</title>
@@ -28,11 +27,11 @@
                 </nav>
                 <div class="header-contact">
                     <div class="header-address">
-                        <i class="fa fa-map-pin"></i>
+                        <i class="fas fa-map-marker-alt"></i>
                         <span>Львів, вул. Львівська, 1</span>
                     </div>
                     <div class="header-phone">
-                        <i class="fa fa-phone"></i>
+                        <i class="fas fa-phone-alt"></i>
                         <span>+38(063)0000000</span>
                     </div>
                 </div>
@@ -45,47 +44,47 @@
         <div class="presentation-right">
             <h1 class="presentation-title">Головний заголовок</h1>
             <h2 class="presentation-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto id laudantium nobis totam eos, nulla quam. Illum itaque ea blanditiis hic, adipisci architecto ipsa consectetur deleniti? Facere dolores deleniti minima. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae tenetur reprehenderit ab officiis sunt corrupti modi architecto laudantium quisquam. Ratione, odio impedit libero eius in aliquam eligendi itaque explicabo non!</h2>
-            <div type="button" class="callback-bt">
-                <div class="text-call">
-                    <i class="fa fa-phone"></i>
-                    <span>Заказать<br>звонок</span>
+        </div>
+    </div>
+    <div class="section-products">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col col-33">
+                    <div class="products-img">
+                        <img src="https://unsplash.it/520/520">
+                    </div>
+                </div>
+                <div class="col col-33">
+                    <div class="products-img">
+                        <img src="https://unsplash.it/520/520">
+                    </div>
+                </div>
+                <div class="col col-33">
+                    <div class="products-img">
+                        <img src="https://unsplash.it/520/520">
+                    </div>
+                </div>
+                <div class="col col-33">
+                    <div class="products-img">
+                        <img src="https://unsplash.it/520/520">
+                    </div>
+                </div>
+                <div class="col col-33">
+                    <div class="products-img">
+                        <img src="https://unsplash.it/520/520">
+                    </div>
+                </div>
+                <div class="col col-33">
+                    <div class="products-img">
+                        <img src="https://unsplash.it/520/520">
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="section-products">
-        <div class="row">
-            <div class="col col-33">
-                <div class="products-img">
-                    <img src="https://unsplash.it/520/520">
-                </div>
-            </div>
-            <div class="col col-33">
-                <div class="products-img">
-                    <img src="https://unsplash.it/520/520">
-                </div>
-            </div>
-            <div class="col col-33">
-                <div class="products-img">
-                    <img src="https://unsplash.it/520/520">
-                </div>
-            </div>
-            <div class="col col-33">
-                <div class="products-img">
-                    <img src="https://unsplash.it/520/520">
-                </div>
-            </div>
-            <div class="col col-33">
-                <div class="products-img">
-                    <img src="https://unsplash.it/520/520">
-                </div>
-            </div>
-            <div class="col col-33">
-                <div class="products-img">
-                    <img src="https://unsplash.it/520/520">
-                </div>
-            </div>
-        </div>
+    <div class="section-testimonial">
+        <p class="testimonial-description">“ Donec sollicitudin molestie malesuada. Curabitur aliquet quam id dui posuere blandit. Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elemena porttitor accumsan tincidunt. Quisque velit nisi. ”</p>
+        <span class="testimonials-author">John Doe</span>
     </div>
 </body>
 </html>
