added some styles to section testimonials

--- a/index.html
+++ b/index.html
@@ -83,8 +83,12 @@
         </div>
     </div>
     <div class="section-testimonial">
+        <i class="fas fa-quote-right"></i>
         <p class="testimonial-description">“ Donec sollicitudin molestie malesuada. Curabitur aliquet quam id dui posuere blandit. Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elemena porttitor accumsan tincidunt. Quisque velit nisi. ”</p>
         <span class="testimonials-author">John Doe</span>
     </div>
+    <footer class="footer">
+        <div class="footer-logo"><a href="#">SunSet</a></div>
+    </footer>
 </body>
 </html>
