added to footer social networks

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class="container">
             <div class="header">
-                <div class="header-logo">
+                <div class="logo">
                     <a href="#">SunSet</a>
                 </div>
                 <nav class="nav">
@@ -88,7 +88,17 @@
         <span class="testimonials-author">John Doe</span>
     </div>
     <footer class="footer">
-        <div class="footer-logo"><a href="#">SunSet</a></div>
+        <div class="container">
+            <div class="logo footer-logo">
+                <a href="#">SunSet</a>
+            </div>
+            <div class="footer-social">
+                <a href="#" class="social-item facebook"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="social-item instagram"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="social-item olx"><img src="./img/favicon-olx.ico" alt=""></a>
+                <a href="#" class="social-item youtube"><i class="fab fa-youtube"></i></a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
