added location to address

--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
                 </nav>
                 <div class="header-contact">
                     <div class="header-address">
-                        <i class="fas fa-map-marker-alt"></i>
-                        <span>Львів, вул. Львівська, 1</span>
+                        <a href="https://www.google.com/maps/place/Futura+HUB/@49.8106255,23.9815864,17z/data=!4m19!1m13!4m12!1m4!2m2!1d23.969792!2d49.8106368!4e1!1m6!1m2!1s0x473ae7fa6ef259ff:0xdc8f255834367bf0!2z0YTRg9GC0YPRgNCwINGF0LDQsSDQu9GM0LLRltCy!2m2!1d23.9830166!2d49.8114391!3m4!1s0x473ae7fa6ef259ff:0xdc8f255834367bf0!8m2!3d49.8114391!4d23.9830166">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <span>Львів, вул. Львівська, 1</span>
+                        </a>
                     </div>
                     <div class="header-phone">
                         <i class="fas fa-phone-alt"></i>
