--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </nav>
                 <div class="header-contact">
                     <div class="header-address">
-                        <a href="https://www.google.com/maps/place/Futura+HUB/@49.8106255,23.9815864,17z/data=!4m19!1m13!4m12!1m4!2m2!1d23.969792!2d49.8106368!4e1!1m6!1m2!1s0x473ae7fa6ef259ff:0xdc8f255834367bf0!2z0YTRg9GC0YPRgNCwINGF0LDQsSDQu9GM0LLRltCy!2m2!1d23.9830166!2d49.8114391!3m4!1s0x473ae7fa6ef259ff:0xdc8f255834367bf0!8m2!3d49.8114391!4d23.9830166">
+                        <a href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB.+%D0%9A%D1%83%D0%BB%D1%8C%D0%BF%D0%B0%D1%80%D0%BA%D1%96%D0%B2%D1%81%D1%8C%D0%BA%D0%B0,+200,+%D0%9B%D1%8C%D0%B2%D1%96%D0%B2,+%D0%9B%D1%8C%D0%B2%D1%96%D0%B2%D1%81%D1%8C%D0%BA%D0%B0+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C,+79000/@49.8115951,23.9809552,17z/data=!3m1!4b1!4m5!3m4!1s0x473ae7100b20cd31:0xf336c8cabc83792d!8m2!3d49.8115917!4d23.9831439" target="_blank">
                             <i class="fas fa-map-marker-alt"></i>
                             <span>Львів, вул. Львівська, 1</span>
                         </a>
